# RAG-Agent

Palma AI/: README.md  README_CLIENT.md  injestion.py  order.py  pyproject.toml  query.py  server.py  server_websocket.py
Palma AI Client/: CLIENT_DEPLOYMENT.md  package-lock.json  package.json
Palma AI Client/src/: main.tsx
Palma AI Client/src/api/: client.ts  mockResponse.ts
Palma AI Client/src/components/: Chat.tsx  chat.css
Palma AI/Deployment docs/: 01_DEPLOYMENT.md
Palma_AI/: .gitignore  README.md  client.html  main.py  pyproject.toml  query.py  server.py  verify_pinecone.py
Palma_AI/Deployment docs/: 01_DEPLOYMENT.md  02-nginx-endpoint-exposure.md  AWS_DEPLOYMENT.md
Palma_AI_Client/: CLIENT_DEPLOYMENT.md  README.md  index.html  nginx.palma.conf  package-lock.json
Palma_AI_Client/src/api/: client.ts
Palma_AI_Client/src/components/: chat.css
